# Sem3Lab3

./: AlphabetIndex.h  Book.h  CMakeLists.txt  Dictionary.h  HashTable.h  IDictionary.h  Pages.cpp  Pages.h  Rows.cpp  Rows.h  array.h  input.txt  input_01.txt  main.cpp  outputBook_01.txt  outputBook_02.txt  outputIndex_01.txt  outputIndex_02.txt  outputbook.txt  tests.h
Sequences/: Deleters.h  DynamicArray.h  SegmentedDeque.h  SegmentedDequeTest.h  Sequence.h  my_abs.h  my_swap.h
Sorting/: DefaultComparators.h  heapSort.h  iSorter.h
UI/: TextViewer.cpp  TextViewer.h
iterator/: iterator.hpp
